# narou_bridge

./: .gitignore  README.md  common.py  flask.py  load_data.py  main.cmd  main.py  main.sh  migrate.py  nginx.conf  pyproject.toml  server.py  setting.ini  unit-config.json  util.py  with_nginx.py
common/css/: common.css  index.css  reader.css
common/script/: image.js  index.js  reader.js  top_page.js
crawler/: __init__.py  common.py  convert_narou.py  ncode_syosetu_com.py  www_pixiv_net.py
src/narou_bridge/: __init__.py
webnovel/: pdfnovels.net.yaml  www.pixiv.net.yaml
