[project]
name = "narou-bridge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rumia_Chnnel", email = "github@rumia-ch.uk" }
]
dependencies = [
    "pyotp>=2.9.0",
    "configparser>=7.1.0",
    "playwright>=1.46.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "brotli>=1.1.0",
    "jsondiff>=2.2.1",
    "tqdm>=4.66.5",
    "flask>=3.0.3",
    "pycryptodome>=3.21.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/narou_bridge"]
